--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: #bb3737;
-    size: 150%;
+    min-height: 100vh;
+    justify-content: center;
+    
 }
 h1{
     margin: auto;
     text-align: center;
-    text-shadow: 1px 0 0 white, 1px 1px 0 white, 0 1px 0 white, -1px 1px 0 white, -1px 0 0 white, -1px -1px 0 white, 0 -1px 0 white, 1px -1px 0 white;
-    
+    color: whitesmoke;
+    font-size: 5em;
 }
 #phrase > p{
     display: inline-block;
@@ -21,8 +23,13 @@ h1{
     width: 400px;
     max-width: 50vw;
     text-align: center;
+    padding-right: 9%;
 }
-
+label{
+    margin-left: 5%;
+    width: 100% ;
+    text-align: center !important;
+}
 #min,#sec{
     font-size: 5em;
     color: white;
@@ -41,4 +48,17 @@ h1{
 }
 #phrase > p{
     color: #ffffff;
+}
+
+@media (max-width: 600px) {
+    h1{
+        font-size: 2.7em;
+    }
+}
+@media (max-width: 421px) {
+    label{
+        text-align: left;
+        margin-left: 0;
+        width: 120%;
+    }
 }
